fixed redundant and overlapping css

--- a/codePen/public/css/style.css
+++ b/codePen/public/css/style.css
@@ -43,7 +43,7 @@ button {
   color: #fff;
 }
 
-.purple {
+/* .purple {
   background-color: #651fff;
 }
 
@@ -53,7 +53,7 @@ button {
 
 .green {
   background-color: #4caf50;
-}
+} */
 
 #links {
   font-size: 20px;
@@ -150,7 +150,7 @@ button {
 
 .parallax { 
     /* The image used */
-    background-image: url("../public/images/fungi.jpg");
+    /* background-image: url("../public/images/fungi.jpg"); */
 
     /* Set a specific height */
     height: 1000px; 
